# ether2d

./: .clangd  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/asteroids/: CMakeLists.txt
examples/asteroids/src/: asteroids.cpp
src/: .logger.cpp.swp  engine.cpp  logger.cpp  logger.hpp  sdl3.cpp  sdl3.hpp  sdl3window.cpp
src/include/ether2d/: engine.hpp  logger.hpp  sdl3.hpp  sdl3errorcodes.hpp  sdl3window.hpp  sdlerrorcodes.hpp  windowtemplate.hpp
